--- a/People.html
+++ b/People.html
@@ -72,6 +72,49 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Local Names on Wall that Heals</h2>
+      <hr>
+      <h5>June 25, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>The Wall that Heals, the Moving Vietnam Wall was in Champlain, NY the weekend of June 26-27, 2021. Included on the wall are two local men who made the ultimate sacrifice: Spec 4 Gary Lee Wilcox US Army and 1st Lieutenant Jerry Furman Clark US Army. Further details about these men can be found in the provided images.</p>
+
+<p>If you ever get a chance, a visit is a way to pay tribute and one of the most moving things one can do in memory of these veterans.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Smith / Alvord / Cook Home on East Main</h2>
       <hr>
       <h5>June 13, 2021 | Mick Jarvis</h5>
@@ -83,33 +126,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -151,7 +194,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
@@ -165,21 +208,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -202,7 +245,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
@@ -216,21 +259,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -249,7 +292,7 @@ They were fiercely proud of their home and its historical significance. They tre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [June 14, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [July 11, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
