--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,189 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Chateaugay Businesses One Hundred Years Ago</h2>
+      <hr>
+      <h5>January 12, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_09.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">10 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_10.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">11 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_11.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">12 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_12.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">13 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_13.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">14 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_14.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">15 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_15.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">16 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_16.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">17 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_17.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">18 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_18.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">19 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_19.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">20 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_20.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">21 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_21.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">22 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_22.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">23 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_23.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">24 / 24</div>
+    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_24.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Today, we journey back 100 years to a selection of ads in the Chateaugay Record during January of 1922. </p>
+
+<p>Back then, the small-town economic model was fully in operation. Shopping was most often done in local businesses and each community offered a wide selection of goods and services that met most wants or needs. Note the broad variety available in the two dozen ads (and the prices as well!). </p>
+
+<p>Main Street commercial store-fronts were all full and the spaces often had waiting lists of prospective businesses hoping for an opportunity to open their doors.</p>
+
+<p>The scores of local and area dairy farmers were coming into town every day with cans of milk for the local plants. While in town, they had an opportunity to stop in the various businesses and pick up needed goods. And, of course, entire families would pack the businesses each weekend, beginning on Friday nights. This was an opportunity not only to do the week’s shopping but to socialize at the same time.</p>
+
+<p>Economic models have evolved in the last century. From small-town, local economies, to the emergence of larger, regional stores, “shopping centers”, to large malls, and now to on-line and remote models, the changes to shopping were swift and eventful during the last ten decades.</p>
+
+<p>Even so, while perusing the ads shown here, it is easy to imagine the hustle and bustle of Chateaugay’s vibrant, local economy “back in the day.”</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Admiral Theodorus Bailey</h2>
       <hr>
       <h5>January 7, 2022 | Mick Jarvis</h5>
@@ -84,27 +267,27 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 3</div>
     <img src="blog/imgs/2022-01-07_admiralbailey/admiralbailey_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 3</div>
     <img src="blog/imgs/2022-01-07_admiralbailey/admiralbailey_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 3</div>
     <img src="blog/imgs/2022-01-07_admiralbailey/admiralbailey_03.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -135,7 +318,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>CCS 2021 Pearl Harbor Exhibit</h2>
@@ -149,63 +332,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -218,91 +401,6 @@
 <p>This annual commemoration was begun three years ago thanks to the sponsorship of Joseph Ryan, former Chateaugay resident and son of Pearl Harbor survivor, Joseph J. Ryan. The Historical Society is proud to collaborate with the students and staff in producing this exhibit each fall.</p>
 
 <p>If you are attending any events at the school during December, be sure to stop by the library and take in the display.</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Nathan Beman and the American Revolution</h2>
-      <hr>
-      <h5>December 2, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 4</div>
-    <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 4</div>
-    <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 4</div>
-    <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 4</div>
-    <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_04.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>This post is about the American Revolution but has a peripheral connection to Chateaugay. </p.
-
-<p>I have just finished rereading a book about Henry Knox entitled: General Henry Knox -  Visionary General of the American Revolution by Mark Puls. </p>
-
-<p>Knox was a clerk in a Boston bookstore as a young man and developed an avid interest in military affairs. He read extensively and became very knowledgeable about artillery and its role in effective warfare. He eventually served in the colonial army and rose to the rank of general, having impressed General Washington with his mastery of military science.</p>
-
-<p>The Chateaugay connection to all this:</p>
-
-<p>On May 10, 1775, American troops commanded by Ethan Allen and Benedict Arnold, had captured Fort Ticonderoga from the English. Their guide was Nathan Beman, a young man from Shoreham, Vermont, just across Lake Champlain. Beman had spent much time at the fort, wandering through the grounds and visiting with the small contingent of British troops stationed there. Because of this familiarity with the grounds and the fort, his father, Samuel Beman, offered Nathan’s services to the colonial troops who were using the Beman tavern as a meeting place to plan the takeover of the fort.</p>
-
-<p>Nathan Beman would eventually become one of Chateaugay’s founders (along with his brother-in-law, Benjamin Roberts) in 1796. </p>
-
-<p>Beman described the takeover of Ticonderoga in a letter he sent to the Malone Palladium newspaper in May of 1835.</p>
-
-<p>Now, back to General Knox: </p>
-
-<p>Following the capture of the fort, Knox was tasked by General Washington with transporting the fifty-nine pieces of artillery from Ticonderoga to the highlands overlooking Boston. The British occupied the city and Washington believed if the cannon should be installed on Dorchester heights overlooking the city, the British would be forced to retreat.</p>
-
-<p>Knox directed his small contingent of men to dissemble the cannon and transport them over 300 miles to Boston. Using eighty teams of oxen and sleds, the men struggled with brutal cold and snow but made it to Boston over the next several weeks. The pieces were reassembled, positioned on the heights and the English departed the city. Knox’s “Noble Train of Artillery” had succeeded in its task.</p>
-
-<p>If you have an interest in Revolutionary War history, this book is an interesting and entertaining read. It illustrates both the extent of the American determination and George Washington’s skill at recognizing the abilities of the men in his command and utilizing those skills to the patriot advantage.</p>
-
-<p>This represents a Chateaugay-related story in the sense that one of our founders, Nathan Beman, played a very small role when the artillery was secured as Fort Ticonderoga was retaken by the Americans. This made the big pieces of armament available to drive the British from Boston early in the Revolution.</p>
-
-<p>The images shown here are:</p>
-
-<li>Puls’ book cover </li>
-
-<li>Alonzo Chappel’s 1856 painting of the takeover of Fort Ticonderoga showing Ethan Allen demanding the surrender with Nathan Beman depicted beside him.</li>
-
-<li>Nathan Beman cropped from the Chappel painting.</li>
-
-<li>A scene showing the American troops struggling with the eighty tons of artillery as they made the 300 mile journey from Ticonderoga, to Lake George and overland to Dorchester Heights. This is a Google image of a painting completed in 1946 by Tom Lovell entitled: “Noble Train of Artillery.” </li>
         </div>
     </div>
 </div>
